# stim-syngen

./: .gitignore  CMakeLists.txt  config.yml  proj-tree.txt  test_circ.txt
build.old/: measure  mestest
output/: test_circ.txt
src/: main.cpp  measure.cpp  mestest.cpp  syngen.cpp  test_circ.txt
src/syngen/: SurfaceCodeSimulatorWrapper.cpp  SurfaceCodeSimulatorWrapper.h
